[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack-cli"
version = "2025.0.0"
dependencies = [
  "typer",
  "typing_extensions",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "black"]

[project.scripts]
blackjack-app = "blackjack.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
